versioned_docs/version-8.7/components/early-access/alpha/alpha-features.md
---
id: alpha-features
title: Alpha features
sidebar_label: Alpha features
description: "Use alpha features to learn about upcoming changes, try them out, and share feedback."
---

You can use alpha features to learn about upcoming changes, try them out, and share feedback.

:::info
To understand the difference between an alpha feature and an alpha release, see [alpha features and releases](/reference/release-policy.md#alpha-features-and-releases).
:::

## Alpha

Selected Camunda features and components are released as **alpha** versions. We release these in an early state for you to test and participate in development by sharing your feedback before they reach [general availability](/reference/release-policy.md#general-availability-ga).

Limitations of alpha features and components include:

- Not for production use.
- APIs, dependencies, and configuration are likely to change.
- Not necessarily feature-complete.
- Might lack full documentation.
- No guaranteed updates to newer releases.
- Support based on SLAs agreed with you, but bugs are treated with the same priority as feature or help requests. See [Camunda Enterprise Support Guide](https://camunda.com/services/enterprise-support-guide/).
- No maintenance service.
- (SaaS) No availability targets.
- Released outside the standard [release policy](/reference/release-policy.md).

To learn more about using alpha features, see [enabling alpha features](/components/console/manage-organization/enable-alpha-features.md).

:::note

- Alpha features can also be included in a minor version (stable) release.
- Although there is no maintenance service, customers can still provide feedback through designated support channels, depending on their SLAs. These channels include filing issues in the respective [GitHub repositories](https://github.com/camunda) and submitting questions and suggestions by [contacting us](/reference/contact.md).
- Alpha releases can also have **limited availability**, such as features that are only available to enterprise customers.

:::
