versioned_docs/version-8.9/components/early-access/alpha/alpha-features.md
---
id: alpha-features
title: Alpha features
sidebar_label: Alpha features
description: "Use alpha features to learn about upcoming changes, try them out, and share feedback."
---

import DocCardList from '@theme/DocCardList';

You can use alpha features to learn about upcoming changes, try them out, and share feedback.

:::info
To understand the difference between an alpha feature and an alpha release, see [alpha features and releases](/reference/announcements-release-notes/release-policy.md#alpha-features-and-releases).
:::

## Alpha

Selected Camunda features and components are released as **alpha** versions. We release these in an early state for you to test and participate in development by sharing your feedback before they reach [general availability](/reference/announcements-release-notes/release-policy.md#general-availability-ga).

Limitations of alpha features and components include:

- Not for production use.
- APIs, dependencies, and configuration are likely to change.
- Not necessarily feature-complete.
- Might lack full documentation.
- No guaranteed updates to newer releases.
- Alpha releases cannot be updated to newer releases and are not suitable for use in production.
- Support based on SLAs agreed with you, but bugs are treated with the same priority as feature or help requests. See [Camunda Enterprise Support Guide](https://camunda.com/services/enterprise-support-guide/).
- No maintenance service.
- (SaaS) No availability targets.
- Released outside the standard [release policy](/reference/announcements-release-notes/release-policy.md).

To learn more about using alpha features, see [enabling alpha features](/components/console/manage-organization/enable-alpha-features.md).

## Available alpha features

The following documented alpha features are currently available:

<DocCardList
items={[
{
type: 'link',
href: '/docs/next/components/early-access/alpha/bpmn-copilot/',
label: 'BPMN Copilot',
docId: 'components/early-access/alpha/bpmn-copilot/bpmn-copilot',
},
{
type: 'link',
href: '/docs/next/components/early-access/alpha/feel-copilot/',
label: 'FEEL Copilot',
docId: 'components/early-access/alpha/feel-copilot/feel-copilot',
},
{
type: 'link',
href: '/docs/next/components/early-access/alpha/a2a-client/',
label: 'A2A Client',
docId: 'components/early-access/alpha/a2a-client/a2a-client',
},
{
type: 'link',
href: '/docs/next/apis-tools/c8ctl/getting-started/',
label: 'c8ctl CLI',
docId: 'apis-tools/c8ctl/getting-started',
},
]}
/>

:::note

- Alpha features can also be included in a minor version (stable) release.
- Although there is no maintenance service, customers can still provide feedback through designated support channels, depending on their SLAs. These channels include filing issues in the respective [GitHub repositories](https://github.com/camunda) and submitting questions and suggestions by [contacting us](/reference/contact.md).
- Alpha releases can also have **limited availability**, such as features that are only available to enterprise customers.

:::
